#2593 fix text ellipsis for ie
* fn-fix_explore_data_ui_error

* fn-fix_explore_data_ui_error

* add word break in explore data title

* remove null string from ie

* Fixed the problem where the detail panel overlapped with the button

* remove ellipsis

--- a/discovery-frontend/src/assets/css/polaris.v2.page.css
+++ b/discovery-frontend/src/assets/css/polaris.v2.page.css
@@ -5303,14 +5303,7 @@ ul.ddp-list-rule2 li.ddp-disabled2 .ddp-wrap-line-add {display:block;}
 .ddp-box-flowdetail .ddp-data-filename em.ddp-icon-dbdata {position:absolute; top:0; left:18px;}
 .ddp-box-flowdetail .ddp-data-filename em.ddp-icon-wrangled-m {position:absolute; top:0; left:18px;}
 .ddp-box-flowdetail .ddp-data-filename em.ddp-icon-file-sql {position:absolute; top:-2px; left:18px;}
-.ddp-box-flowdetail .ddp-data-filename span.ddp-txt-filename {display:block; position:relative; max-width:100%; max-height:49px; padding:5px 23px 3px 5px;font-size:16px; color:#35393f; font-weight:bold; line-height:21px; font-family:sans-serif;box-sizing:border-box;overflow:hidden; cursor:pointer;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2; /* 라인수 */
-  /* autoprefixer: off */
-  -webkit-box-orient: vertical;
-  /* autoprefixer: on */
-  word-wrap:break-word; }
+.ddp-box-flowdetail .ddp-data-filename span.ddp-txt-filename {display:block; position:relative; max-width:100%;padding:5px 23px 3px 5px;font-size:16px; color:#35393f; font-weight:bold; line-height:21px; font-family:sans-serif;box-sizing:border-box;overflow:hidden; cursor:pointer; word-break:break-all;}
 .ddp-box-flowdetail .ddp-data-filename span.ddp-txt-filename .ddp-txt-filename-in {display:inline-block;}
 
 .ddp-box-flowdetail .ddp-data-filename.ddp-selected span.ddp-txt-filename {display:none;}
@@ -8866,11 +8859,11 @@ table.ddp-table-line tbody tr td .ddp-ui-popularity .ddp-bar {float:left;}
 .ddp-box-banner .ddp-banner-main {display:flex; height:100%; width:100%; background:url(../images/bg_banner01.png) no-repeat; background-size:100% 100%; align-items: center; justify-content: center; }
 .ddp-box-banner .ddp-banner-list {width:325px; min-width:325px;}
 .ddp-box-banner .ddp-ui-banner-link.type-banner01 {padding:0 20px;display:table-cell; vertical-align:middle;}
-.ddp-box-banner .ddp-ui-banner-link.type-banner01 .ddp-banner-title {padding-bottom:18px; color:#ffffff; font-size:22px; font-weight:bold; text-align:center;}
+.ddp-box-banner .ddp-ui-banner-link.type-banner01 .ddp-banner-title {padding-bottom:18px; color:#ffffff; font-size:22px; font-weight:bold; text-align:center; word-break:break-all;}
 .ddp-box-banner .ddp-ui-banner-link.type-banner01 .ddp-banner-title .ddp-data-images {margin-right:10px; vertical-align:middle;}
 .ddp-box-banner .ddp-ui-banner-link.type-banner01 .ddp-banner-title .ddp-data-images svg {position:relative; top:-3px; width:30px; height:30px; vertical-align:middle;}
 
-.ddp-box-banner .ddp-ui-banner-link.type-banner01 .ddp-txt-detail {height:32px; text-align:center; color:#fff; font-size:13px; opacity:0.4;
+.ddp-box-banner .ddp-ui-banner-link.type-banner01 .ddp-txt-detail {max-height:32px; text-align:center; color:#fff; font-size:13px; opacity:0.4;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -8879,6 +8872,7 @@ table.ddp-table-line tbody tr td .ddp-ui-popularity .ddp-bar {float:left;}
   -webkit-box-orient: vertical;
   /* autoprefixer: on */
   word-wrap:break-word;
+  word-break:break-all;
 
 }
 .ddp-box-banner .ddp-ui-banner-link.type-banner01 .ddp-banner-tags {padding-top:9px; margin:-3px -3px 0 -3px;text-align:center;}
